# soci_postgresql

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
doc/: SOCI_guide.md  soci_connect_pool.drawio
include/: ConnectPool.h  Entry.h  Singleton.h
include/connect_pool/: ConnectPool.h
include/error/: ErrorCode.h
include/util/: Log.h  Singleton.h
src/: CMakeLists.txt  ConnectPool.cpp
src/common/: Common.h
src/common/util/: CMakeLists.txt  Log.cpp  Log.h  Singleton.h
src/connect_pool/: CMakeLists.txt  ConnectPool.cpp
src/pg_adapt/: CMakeLists.txt  Database.cpp  Database.h  PgEntry.cpp  PgEntry.h  common.h  database.cpp  database.h
src/util/: Log.cpp
test/: CMakeLists.txt
test/simple/: Student.h
test/st/: CMakeLists.txt  SchoolMember.h  Student.h  Teacher.h
test/st/demo/: Demo.cpp  Demo.h  SchoolMember.h  Student.h  Teacher.h
test/st/pg_adapt/: database_test.cpp
test/ut/: CMakeLists.txt  ConnectPool_test.cpp  ConnectPool_test.h
